app-bar/pds-app-bar/pds-app-bar.css
#pds-app-bar,
.pds-app-bar-section,
#pds-app-bar-title,
#pds-app-bar-info {
    display: flex;
    align-items: center;
}

#pds-app-bar-dropdown,
#pds-app-bar-info {
    display: flex;
    flex-direction: column-reverse;
}

#pds-app-bar {
    position: relative;
    top: 0;
    left: 0;
    max-width: 100vw;
    padding: 5px;
    height: 25px;
    color: #f5f5f6;
    background: #000;
}

#pds-app-bar * {
    font-family: Roboto,Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif !important;
    -webkit-font-smoothing: antialiased !important;
}

#pds-app-bar a {
    color: #f5f5f6;
    text-decoration: none;
    cursor: pointer;
}

.pds-app-bar-section:first-child {
    margin-right: 70px;
}
#pds-app-bar-title {
    font-size: 16px;
}
#pds-app-bar-title img {
    display: flex;
    align-items: center;
    width: 48px;
    height: 25px;
    margin-right: 5px;
}

#pds-app-bar-dropdown > a {
    font-size: 14px;
    padding: 8px 5px;
}
#pds-app-bar-dropdown > a:hover {
    background-color: #171717;
}
#pds-app-bar-dropdown > a > span {
    margin-left: 40px;
}
#pds-app-bar-dropdown > a > span:after {
    display: inline-block;
    content: "\2023";
    color: #f5f5f6;
    -webkit-transform: scale(2.5,1.5) rotate(90deg);
       -moz-transform: scale(2.5,1.5) rotate(90deg);
            transform: scale(2.5,1.5) rotate(90deg);
}
#pds-app-bar-dropdown.active > a > span:after {
    -webkit-transform: scale(2.5,1.5) rotate(270deg);
       -moz-transform: scale(2.5,1.5) rotate(270deg);
            transform: scale(2.5,1.5) rotate(270deg);
}
#pds-app-bar-dropdown > ul,
#pds-app-bar-info > div {
    display: none;
    position: absolute;
    top: 35px;
    margin: 0;
    border-radius: 0 0 3px 3px;
}
#pds-app-bar-dropdown.active > ul,
#pds-app-bar-info.active > div{
    display: block;
}
#pds-app-bar-dropdown > a,
#pds-app-bar-dropdown > ul li,
#pds-app-bar-dropdown > ul li > a {
    -webkit-transition: all 100ms ease;
       -moz-transition: all 100ms ease;
            transition: all 100ms ease;
}

#pds-app-bar-dropdown > ul {
    z-index: 999;
    background-color: rgba(0,0,0,0.95);
    padding: 3px 5px;
}
#pds-app-bar-dropdown > ul li {
    list-style-type: none;
    padding: 7px 0;
    font-size: 12px;
}
#pds-app-bar-dropdown > ul li:hover > a {
    color: #64b6f7;
}

#pds-app-bar-info > div {
    z-index: 1000;
    background-color: rgba(0,0,0,1);
    font-size: 12px;
    padding: 7px 8px;
    max-width: 580px;
    left: 288px;
}

